更新config-server的配置

--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
 		<groupId>net.engining.project</groupId>
 		<artifactId>project-parent</artifactId>
-		<version>3.2-SNAPSHOT</version>
+		<version>3.3-SNAPSHOT</version>
 	</parent>
 
 	<groupId>net.engining.cloud</groupId>
@@ -23,13 +23,14 @@
 
     <dependencyManagement>
         <dependencies>
-            <dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-dependencies</artifactId>
-			<version>Dalston.SR3</version>
-			<type>pom</type>
-			<scope>import</scope>
-		</dependency>
+            <!-- spring cloud -->
+			<dependency>
+	            <groupId>org.springframework.cloud</groupId>
+	            <artifactId>spring-cloud-dependencies</artifactId>
+	            <version>Edgware.SR4</version>
+	            <type>pom</type>
+	            <scope>import</scope>
+        	</dependency>
         </dependencies>
     </dependencyManagement>
     
